Fix display of notifications on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,8 +135,6 @@ clr-dg-cell {
   margin: .5rem 0 .5rem 0;
   border-radius: .125rem;
   border-right: .25rem solid #0079b8;
-  display: grid;
-  grid-template-columns: 75% auto;
   background-color: #F2F2F2;
 
   .notification-box-col {
